# LyricAlignment

./: .gitignore  AI_SESSION_ENTRY.md  ARCHIVE_MANIFEST.json  ARCHIVE_REPORT.md  README.md  pyproject.toml
configs/: README.md
configs/assets/: README.md  assets.example.yaml  smoke_samples.example.yaml
configs/curation/: README.md  curation_v1.example.yaml  m4singer_annotation_overlays_v1.jsonl
configs/experiments/: README.md  exp_character_alignment_smoke.yaml  exp_transcription_baseline.yaml
configs/metrics/: README.md  token_alignment_metrics.yaml  transcription_metrics.yaml
configs/models/: README.md  heuristic.yaml  qwen_asr.yaml  qwen_forced_aligner.yaml  whisper.yaml
configs/paths/: README.md  local_paths.example.yaml
configs/training/: README.md  qwen_fa_chinese_adaptation_plan.yaml
data/: README.md  datasets_registry.md
data/manifests/: README.md  manifest_alignment.template.csv  manifest_asr_baseline.template.csv
data/schemas/: README.md
docs/: README.md  principles.md
docs/manual/: README.md  annotation_schema.md  data_curation.md  data_preparation.md  dataset_split_and_leakage.md  experiment_protocol.md  git_workflow.md  (+3 more)
reports/: README.md
requirements/: README.md  qwen_smoke_server_known.txt
results/: README.md
runs/: README.md
scripts/: README.md
src/: README.md
tests/: README.md  test_archive_builder.py  test_asset_scripts.py  test_audio_contract.py  test_character_metrics.py  test_m4singer_preparation.py  test_mir1k_partial_align.py  test_quality_tiers.py  test_smoke_helpers.py  test_split.py  test_synthetic.py
(+118 files in other folders)
